Flyttade svenska fyrar till avsnittet för just fyrar.

--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -622,59 +622,9 @@ man till och med hade bredare kanalraster de-facto.
 
 \clearpage
 
-\subsection{Svenska fyrar VHF/UHF}
+\subsection{Repeatrar distrikt 0}
 
 \scriptsize
-
-\begin{longtable}{rlllrlrrl}
-\bf Dist & \bf Signal & \bf Mod  & \bf Ort      & \bf Frekvens & \bf Lokator & \bf MASL & \bf MAGL & \bf Riktning \\ \hline
-0        & SKØCT/B    & CW       & Stockholm    & 5760.9030    & JO99JX      & 60       & 30       & Omni         \\
-0        & SKØCT/B    & CW       & Stockholm    & 10368.8400   & JO89XJ      & 50       & 20       & Omni         \\
-0        & SKØEN/B    & CW       & Väddö        & 10368.8470   & JO99JX      & 60       & 30       & 360°         \\
-0        & SKØEN/B    & CW       & Väddö        & 1296.8350    & JO99JX      & 70       & 40       & Omni         \\
-1        & SK1UHF     & CW       & Klintehamn   & 432.4050     & JO97CJ      & 65       & 60       & Omni         \\
-1        & SK1VHF     & CW       & Klintehamn   & 144.4470     & JO97CJ      & 65       & 60       & Omni         \\
-1        & SK1UHG     & CW       & Klintehamn   & 1296.9500    & JO97CJ      & 65       & 60       & Omni         \\
-2        & SK2VHF     & CW       & Vindeln      & 144.4570     & JP94TF      & 300      & 10       & N+SV         \\
-         &            &          & Buberget     &              &             &          &          &              \\
-2        & SK2SHF     & CW       & Vännäs       & 1296.9850    & JP93VU      & 250      & 50       &              \\
-         &            &          & Granlundsb.  &              &             &          &          &              \\
-3        & SM3KDR     & CW       & Krokom/Aspås & 28.2860      & JP73GI      & 380      & 5        & E-W          \\
-3        & SK3UHF     & CW       & Nordingrå    & 432.4550     & JP92FW      & 200      & 8        & Omni         \\
-3        & SK3UHG     & CW       & Nordingrå    & 1296.8550    & JP92FW      & 200      & 10       & Omni         \\
-3        & SK3SIX     & CW       & Östersund    & 50.4680      & JP73HC      & 480      & 7        & Omni         \\
-4        & SK4MPI     & PI4 - CW & Borlänge     & 144.4120     & JP70PI      & 380      & 20       & NV+NO        \\
-4        & SK4BX/B    & CW       & Garphyttan   & 432.4600     & JO79LH      & 270      & 10       & N E S W      \\
-         &            &          & Storstensh.  &              &             &          &          &              \\
-4        & SK4BX/B    & CW       & Garphyttan   & 10368.9600   & JO79LI      & 270      & 10       &              \\
-         &            &          & Ånnaboda     &              &             &          &          &              \\
-4        & SK4BX/B    & CW       & Garphyttan   & 1296.9600    & JO79LI      & 270      & 10       &              \\
-         &            &          & Ånnaboda     &              &             &          &          &              \\
-6        & SK6YH/B    & CW       & Göteborg     & 10368.8080   & JO57XQ      & 135      & 40       & 184°         \\
-6        & SK6MHI     & CW       & Göteborg     & 5760.8000    & JO57XQ      & 135      & 40       & Omni         \\
-6        & SK6MHI     & CW       & Göteborg     & 24048.8000   & JO57XQ      & 135      & 40       & Omni         \\
-6        & SK6MHI     & CW       & Göteborg     & 10368.8000   & JO57XQ      & 135      & 40       & Omni         \\
-6        & SK6MHI     & CW       & Hönö         & 1296.8000    & JO57TQ      & 40       & 30       & Omni         \\
-6        & SK6WW/B    & CW       & Karlsborg    & 10368.8350   & JO78FM      & 240      & 20       & Omni         \\
-         &            &          & Vaberget     &              &             &          &          &              \\
-6        & SK6EI/B    & CW       & Skövde       & 50.4600      & JO68VJ      & 300      & 30       & South        \\
-6        & SK6SHG     & CW       & Tjörn Island & 24048.8830   & JO57TX      & 118      & 8        & N / S        \\
-6        & SK6UHI     & CW       & Tjörn Island & 1296.8050    & JO57TX      & 128      & 18       & Omni         \\
-6        & SK6VHF     & CW       & Tjörn Island & 144.4060     & JO57TX      & 122      & 12       & Omni         \\
-6        & SK6UHF     & CW       & Varberg      & 432.4120     & JO67EH      & 175      & 25       & Omni         \\
-         &            &          & Veddige      &              &             &          &          &              \\
-7        & SM7DTE/B   & CW       & Gärsnäs      & 5760.8410    & JO75DN      & 86       & 8        & Omni         \\
-7        & SM7DTE/B   & CW       & Gärsnäs      & 10368.8410   & JO75DN      & 86       & 8        & Omni         \\
-7        & SM7DTE/B   & CW       & Gärsnäs      & 24048.8430   & JO75DN      & 86       & 8        & Omni         \\
-7        & SK7VHF     & CW       & Sjöbo        & 144.4610     & JO65UQ      & 25       & 25       & Omni         \\
-7        & SK7GH/B    & CW       & Värnamo      & 28.2980      & JO77BF      & 230      & 10       & Omni         \\
-\vspace{1 ex}                                                                                                     \\
-\caption{Fyrar i svenska distrikt, uppdaterad 250501}                                                             \\
-\end{longtable}
-
-\clearpage
-
-\subsection{Repeatrar distrikt 0}
 
 \begin{longtable}{llllrrlll}
 \bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline
@@ -741,21 +691,25 @@ Repeater & FM          & SLØZS/R  & Västberga   & 145.6000     & -0.600     & 
 Repeater & FM          & SLØZS/R  & Västberga   & 434.9000     & -2.000     & 123.0      & JO89XH      & QRV      \\
 Repeater & DMR         & SKØEN    & Älmsta      & 434.6000     & -2.000     & CC 0       & JO99JX      & QRV      \\
 Repeater & FM/DMR      & SKØEN    & Älmsta      & 145.7375     & -0.600     & 77.0/CC 0  & JO99JX      & QRV      \\
-\vspace{1 ex}                                                                                                     \\
-\caption{Repeaterlista distrikt 0, uppdaterad 250501}
 \end{longtable}
+\normalsize
+
 
 \subsection{Repeatrar distrikt 1}
+
+\scriptsize
 
 \begin{longtable}{llllrrlll}
 \bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline
 Repeater   & FM / C4FM & SK1RGU   & Endre        & 145.7750     & -0.600     & 1750 / 218.1 & JO97FO      & QRV      \\
 Repeater   & FM        & SL1ZXK/R & Slite        & 434.6000     & -2.000     & 218.1        & JO97JR      & QRV      \\
-\vspace{1 ex}                                                                                                        \\
-\caption{Repeaterlista distrikt 1, uppdaterad 250501}                                                                \\
 \end{longtable}
 
+\normalsize
+
 \subsection{Repeatrar distrikt 2}
+
+\scriptsize
 
 \begin{longtable}{llllrrlll}
 \bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline
@@ -797,13 +751,15 @@ Repeater   & DMR         & SK2AT     & Vännäs             & 434.9750     & -2.
 Repeater   & FM          & SK2RIU    & Vännäs/Granlundsb. & 145.7250     & -0.600     & 1750       & JP93VU      & QRV      \\
 Repeater   & FM          & SK2RIU    & Vännäs/Granlundsb. & 434.7250     & -2.000     & 1750/107.2 & JP93VU      & QRV      \\
 Repeater   & FM          & SK2RWJ    & Älvsbyn            & 145.6750     & -0.600     & 107.2      & KP05LQ      & QRV      \\
-\vspace{1 ex}                                                                                                               \\
-\caption{Repeaterlista distrikt 2, uppdaterad 250501}                                                                       \\
 \end{longtable}
+
+\normalsize
 
 \clearpage
 
 \subsection{Repeatrar distrikt 3}
+
+\scriptsize
 
 \begin{longtable}{llllrrlll}
 \bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline
@@ -866,14 +822,14 @@ Repeater   & FM         & SK3RIA   & Östersund        & 434.7500    & -2.000   
 Repeater   & FM/C4FM    & SK3JR/R  & Östersund        & 145.7500    & -0.600   & 127.3      & JP73JE & QRV  \\
 Repeater   & FM/C4FM    & SK3JR/R2 & Östersund        & 145.7875    & -0.600   & 127.3      & JP73HC & QRV  \\
            &            &          & Brattåsen        &             &          &            &        &      \\
-\vspace{1 ex}                                                                                               \\
-\caption{Repeaterlista distrikt 3, uppdaterad 250501}                                                       \\
 \end{longtable}
+\normalsize
 
 \clearpage
 
 \subsection{Repeatrar distrikt 4}
 
+\scriptsize
 \begin{longtable}{llllrrlll}
 \bf Typ  & \bf Mod    & \bf Call & \bf Ort             & \bf Frekvens & \bf Duplex & \bf Access    & \bf Lokator & \bf QRV? \\ \hline
 Repeater & DMR        & SK3JR    & Östersund/Brattåsen & 434.5625     & -2.000     & CC 3          & JP73HC      & QRV      \\
@@ -933,14 +889,14 @@ Repeater & FM         & SK4TL/R  & Örebro              & 51.9500      & -0.600 
          &            &          & Suttarboda          &              &            &               &             &          \\
 Repeater & FM         & SK4TL/R  & Örebro              & 145.7125     & -0.600     & 1750 / DTMF 4 & JO79KH      & QRV      \\
          &            &          & Suttarboda          &              &            &               &             &          \\
-\vspace{1 ex}                                                                                                               \\
-\caption{Repeaterlista distrikt 4, uppdaterad 250501}                                                                       \\
 \end{longtable}
+\normalsize
+
 
 \clearpage
 
 \subsection{Repeatrar distrikt 5}
-
+\scriptsize
 \begin{longtable}{llllrrlll}
 \bf Typ  & \bf Mod    & \bf Call & \bf Ort           & \bf Frekvens & \bf Duplex & \bf Access      & \bf Lokator & \bf QRV? \\ \hline
 Repeater & FM         & SK5BB/R  & Arboga/Kolsva     & 434.8750     & -2.000     & Carrier         & JP79WO      & QRV      \\
@@ -1000,14 +956,14 @@ Repeater & DMR        & SA5HAV/R & Uppsala/Rasbo     & 434.6375     & -2.000    
 Repeater & FM         & SK5RHQ   & Västerås          & 145.7750     & -0.600     & 136.5 / 82.5    & JO89GO      & QRV      \\
 Repeater & FM         & SK5RHQ   & Västerås          & 434.7750     & -2.000     & 136.5 / 82.5    & JO89GO      & QRV      \\
 Repeater & FM         & SM5YMS   & Åtvidaberg        & 145.6625     & -0.600     & 82.5            & JO78XE      & QRV      \\
-\vspace{1 ex}                                                                                                               \\
-\caption{Repeaterlista distrikt 5, uppdaterad 250501}                                                                       \\
 \end{longtable}
+\normalsize
 
 \clearpage
 
 \subsection{Repeatrar distrikt 6}
 
+\scriptsize
 \begin{longtable}{llllrrlll}
 \bf Typ  & \bf Mod   & \bf Call & \bf Ort           & \bf Frekvens & \bf Duplex & \bf Access   & \bf Lokator & \bf QRV? \\ \hline
 Repeater & FM        & SK6RIC   & Alingsås          & 145.6250     & -0.600     & 1750 / 114.8 & JO67GW      & QRV      \\
@@ -1113,14 +1069,13 @@ Repeater & DMR       & SK6RKI   & Öckerö            & 434.8500     & -2.000   
 Repeater & FM        & SK6RKI   & Öckerö            & 145.7500     & -0.600     & 1750 / 114.8 & JO57TR      & QRV      \\
 Link     & FM        & SM6TZL/L & Örby              & 145.2375     & Simplex    & Carrier      & JO67IL      & QRV      \\
 Link     & FM        & SM6TZL/L & Örby              & 434.2250     & Simplex    & Carrier      & JO67IL      & QRV      \\
-\vspace{1 ex}                                                                                                           \\
-\caption{Repeaterlista distrikt 6, uppdaterad 250501}                                                                   \\
 \end{longtable}
+\normalsize
 
 \clearpage
 
 \subsection{Repeatrar distrikt 7}
-
+\scriptsize
 \begin{longtable}{llllrrlll}
 \bf Typ  & \bf Mod         & \bf Call & \bf Ort      & \bf Frekvens & \bf Duplex & \bf Access   & \bf Lokator & \bf QRV? \\ \hline
 Repeater & FM              & SK7RFL   & Algutsrum    & 434.6000     & -2.000     & 1750/79.7    & JO86GQ      & QRV      \\
@@ -1229,10 +1184,7 @@ Repeater & DMR             & SK7HW    & Växjö        & 434.7000     & -2.000  
 Repeater & FM              & SK7HW/R  & Växjö        & 145.6750     & -0.600     & 1750/156.7   & JO76KU      & QRV      \\
          &                 &          & Hollstorp    &              &            &              &             &          \\
 Repeater & FM/DMR          & SK7REE   & Örkelljunga  & 434.9750     & -2.000     & 79.7/CC 7    & JO66PG      & QRV      \\
-\vspace{1 ex}                                                                                                            \\
-\caption{Repeaterlista distrikt 7, uppdaterad 250501}                                                                    \\
 \end{longtable}
-
 \normalsize
 
 \clearpage
@@ -1664,7 +1616,59 @@ Alla frekvenser i kHz, bandbredder i Hz.
 %\end{landscape}
 \normalsize
 
+\clearpage
+
 \section{Amatörradiofyrar}
+
+\subsection{Svenska fyrar VHF/UHF}
+
+\scriptsize
+
+\begin{longtable}{rlllrlrrl}
+	\bf Dist & \bf Signal & \bf Mod  & \bf Ort      & \bf Frekvens & \bf Lokator & \bf MASL & \bf MAGL & \bf Riktning \\ \hline
+	       0 & SKØCT/B    & CW       & Stockholm    &    5760.9030 & JO99JX      &       60 &       30 & Omni         \\
+	       0 & SKØCT/B    & CW       & Stockholm    &   10368.8400 & JO89XJ      &       50 &       20 & Omni         \\
+	       0 & SKØEN/B    & CW       & Väddö        &   10368.8470 & JO99JX      &       60 &       30 & 360°         \\
+	       0 & SKØEN/B    & CW       & Väddö        &    1296.8350 & JO99JX      &       70 &       40 & Omni         \\
+	       1 & SK1UHF     & CW       & Klintehamn   &     432.4050 & JO97CJ      &       65 &       60 & Omni         \\
+	       1 & SK1VHF     & CW       & Klintehamn   &     144.4470 & JO97CJ      &       65 &       60 & Omni         \\
+	       1 & SK1UHG     & CW       & Klintehamn   &    1296.9500 & JO97CJ      &       65 &       60 & Omni         \\
+	       2 & SK2VHF     & CW       & Vindeln      &     144.4570 & JP94TF      &      300 &       10 & N+SV         \\
+	         &            &          & Buberget     &              &             &          &          &              \\
+	       2 & SK2SHF     & CW       & Vännäs       &    1296.9850 & JP93VU      &      250 &       50 &              \\
+	         &            &          & Granlundsb.  &              &             &          &          &              \\
+	       3 & SM3KDR     & CW       & Krokom/Aspås &      28.2860 & JP73GI      &      380 &        5 & E-W          \\
+	       3 & SK3UHF     & CW       & Nordingrå    &     432.4550 & JP92FW      &      200 &        8 & Omni         \\
+	       3 & SK3UHG     & CW       & Nordingrå    &    1296.8550 & JP92FW      &      200 &       10 & Omni         \\
+	       3 & SK3SIX     & CW       & Östersund    &      50.4680 & JP73HC      &      480 &        7 & Omni         \\
+	       4 & SK4MPI     & PI4 - CW & Borlänge     &     144.4120 & JP70PI      &      380 &       20 & NV+NO        \\
+	       4 & SK4BX/B    & CW       & Garphyttan   &     432.4600 & JO79LH      &      270 &       10 & N E S W      \\
+	         &            &          & Storstensh.  &              &             &          &          &              \\
+	       4 & SK4BX/B    & CW       & Garphyttan   &   10368.9600 & JO79LI      &      270 &       10 &              \\
+	         &            &          & Ånnaboda     &              &             &          &          &              \\
+	       4 & SK4BX/B    & CW       & Garphyttan   &    1296.9600 & JO79LI      &      270 &       10 &              \\
+	         &            &          & Ånnaboda     &              &             &          &          &              \\
+	       6 & SK6YH/B    & CW       & Göteborg     &   10368.8080 & JO57XQ      &      135 &       40 & 184°         \\
+	       6 & SK6MHI     & CW       & Göteborg     &    5760.8000 & JO57XQ      &      135 &       40 & Omni         \\
+	       6 & SK6MHI     & CW       & Göteborg     &   24048.8000 & JO57XQ      &      135 &       40 & Omni         \\
+	       6 & SK6MHI     & CW       & Göteborg     &   10368.8000 & JO57XQ      &      135 &       40 & Omni         \\
+	       6 & SK6MHI     & CW       & Hönö         &    1296.8000 & JO57TQ      &       40 &       30 & Omni         \\
+	       6 & SK6WW/B    & CW       & Karlsborg    &   10368.8350 & JO78FM      &      240 &       20 & Omni         \\
+	         &            &          & Vaberget     &              &             &          &          &              \\
+	       6 & SK6EI/B    & CW       & Skövde       &      50.4600 & JO68VJ      &      300 &       30 & South        \\
+	       6 & SK6SHG     & CW       & Tjörn Island &   24048.8830 & JO57TX      &      118 &        8 & N / S        \\
+	       6 & SK6UHI     & CW       & Tjörn Island &    1296.8050 & JO57TX      &      128 &       18 & Omni         \\
+	       6 & SK6VHF     & CW       & Tjörn Island &     144.4060 & JO57TX      &      122 &       12 & Omni         \\
+	       6 & SK6UHF     & CW       & Varberg      &     432.4120 & JO67EH      &      175 &       25 & Omni         \\
+	         &            &          & Veddige      &              &             &          &          &              \\
+	       7 & SM7DTE/B   & CW       & Gärsnäs      &    5760.8410 & JO75DN      &       86 &        8 & Omni         \\
+	       7 & SM7DTE/B   & CW       & Gärsnäs      &   10368.8410 & JO75DN      &       86 &        8 & Omni         \\
+	       7 & SM7DTE/B   & CW       & Gärsnäs      &   24048.8430 & JO75DN      &       86 &        8 & Omni         \\
+	       7 & SK7VHF     & CW       & Sjöbo        &     144.4610 & JO65UQ      &       25 &       25 & Omni         \\
+	       7 & SK7GH/B    & CW       & Värnamo      &      28.2980 & JO77BF      &      230 &       10 & Omni
+\end{longtable}
+\normalsize
+\clearpage
 
 \subsection{IBP -- International Beacon Project}
 
