--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -134,12 +134,14 @@ yrkesbåtar SC+4 siffror för fritidsbåtar.
 Amatörradion använder ett antal signaler, de viktigaste är:
 
 \begin{tabular}{ll}
-	SM & Amatörradiosignal utdelad av PTS (nya signaler tilldelas ej i
-        serien) \\ SA & Amatörradiosignal tilldelad av SSA \\ SK & Klubbsignaler
-        (som regel tvåställiga efter distriktsiffran) \\ & numera tilldelas även
-        klubbar SA-signaler som är tvåställiga efter distriktssiffran \\ SL &
-        Militära signaler (som regel två- eller treställiga efter
-        distriktsiffran)
+	SM & Amatörradiosignal utdelad av PTS (nya huvudsignaler tilldelas ej i
+        serien) \\ SA & Amatörradiosignal tilldelad av SSA \\
+    SK & Klubbsignaler
+        (som regel tvåställiga efter distriktsiffran) \\
+       & numera tilldelas även
+         klubbar SA-signaler som är tvåställiga efter distriktssiffran \\
+    SL & Militära signaler (som regel två- eller treställiga efter
+         distriktsiffran)
 \end{tabular}
 
 Dessa signaler följs av en \textit{distriktsiffra} se särskilt avsnitt och sedan
@@ -520,7 +522,6 @@ Den stora fördelen med morsesignalering är att bandbreden blir mycket låg och
 därmed blir hörbarheten också god även i en miljö med störningar. Genom att
 hålla nere nycklingstakten och stigtiden på den nycklade bärvågen kan man
 komma ner runt 50\,Hz bandbredd vilket är mycket bra.
-
 
 \subsection{Svenska morsealfabetet med specialtecken}
 Här kommer en sammanställning av den morse-kod som lärts ut i
