--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -54,12 +54,12 @@ Täpp-Anders Sikvall\\
 Denna handbok är författad av Täpp-Anders Sikvall, SM5UEI. Den är
 släppt under en creative commons licens som kallas för CC BY-NC-SA.
 
-%I korthet innebär det att du får distribuera och trycka upp materialet
-%hur du vill, dela med dig av det men inte för kommersiella ändamål. Du
-%får dessutom använda materialet i dina egna alster men om du gör det
-%ska du släppa dessa under samma licens. Mitt namn ska stå kvar i
-%originalet och om du använder det i ett annat verk ska det vara
-%tydligt att det är ett derivat.
+I korthet innebär det att du får distribuera och trycka upp materialet
+hur du vill, dela med dig av det men inte för kommersiella ändamål. Du
+får dessutom använda materialet i dina egna alster men om du gör det
+ska du släppa dessa under samma licens. Mitt namn ska stå kvar i
+originalet och om du använder det i ett annat verk ska det vara
+tydligt att det är ett derivat.
 
 För fullständig information kan du besöka\\
 \url{https://creativecommons.org/licenses/by-nc-sa/4.0/deed.sv}
