--- a/tex/kap-reglemente.tex
+++ b/tex/kap-reglemente.tex
@@ -1,6 +1,7 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = sv_SE
 \chapter{Reglemente}
+\index{reglemente}
 
 Vi tittar på reglementen kring användning av radiofrekvenser och utrustning
 inom Sverige och vilka myndigheter och lagar som styr detta. Vi går vidare med
@@ -10,6 +11,7 @@ detta kapitel.
 \clearpage
 
 \section{Tillståndsfri radio}
+\index{radio!tillståndsfri}
 
 I sverige regleras radioanvändningen av Post- och telestyrelsens (PTS)
 bestämmelser och det gäller all radioanvändning. Delar av detta delegeras
