--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -368,7 +368,7 @@ repeatern och har satt upp den i första hand för att supporta mobila stationer
 
 Nödtrafik har alltid prioritet.
 
-\section{QSO}
+\section{Radiosamtal -- QSO}
 
 Konsten att genomföra ett radiosamtal (QSO) i olika sammanhang. Ofta blir folk
 nervösa i början för hur detta går till. Man säger sin signal och motstationens
@@ -508,6 +508,8 @@ sedan fram andra. Tänk på hur du själv skulle vilja att en pile-up på din eg
 station skulle vilja agera. Den gyllene regeln är också alltid lyssna först ---
 sänd sedan!
 
+\clearpage
+
 \section{Morsekoden}
 
 I dag används telegrafi ytterst sällan i kommersiella sammanhang, en gång i
@@ -527,6 +529,9 @@ komma ner runt 50\,Hz bandbredd vilket är mycket bra.
 Här kommer en sammanställning av den morse-kod som lärts ut i
 generationer inom det militära för signalister.
 
+\begin{table}[H]
+\centering
+\small
 \begin{tabular}{llll}
 	Adam    & \MAdam    & Nolla                 & \MNoll         \\
 	Bertil  & \MBertil  & Ett                   & \MEtt          \\
@@ -559,6 +564,11 @@ generationer inom det militära för signalister.
 	Ärlig   & \MArlig   &                       &  \\
 	Östen   & \MOsten   &
 \end{tabular}
+\normalsize
+\caption{Svenska morsealfabetet.}
+\label{tab:morsealfabetet}
+\end{table}
+
 
 %\vspace{\baselineskip}
 
